--- a/blue-map/config/core.conf
+++ b/blue-map/config/core.conf
@@ -8,8 +8,8 @@
 # and you agree that BlueMap will download and use a minecraft-client file (depending on the minecraft-version) from mojangs servers (https://launcher.mojang.com/) for you.
 # This file contains resources that belong to mojang and you must not redistribute it or do anything else that is not compliant with mojang's EULA.
 # BlueMap uses resources in this file to generate the 3D-Models used for the map and texture them. (BlueMap will not work without those resources.)
-# 2024-01-19T19:30:36
-accept-download: true
+# 2024-01-21T18:00:03
+accept-download: false
 
 # The folder where bluemap saves data-files it needs during runtime or to save e.g. the render-progress to resume it later.
 # Default is "bluemap"
