--- a/blue-map/config/maps/nether.conf
+++ b/blue-map/config/maps/nether.conf
@@ -6,18 +6,18 @@
 # The name of this map
 # This defines the display name of this map, you can change this at any time.
 # Default is the id of this map
-name: "Overworld"
+name: "Nether"
 
 # The path to the save-folder of the world to render.
 #  (If this is not defined (commented out or removed), the map will be only registered to the web-server and the web-app
 #   but not rendered or loaded by BlueMap. This can be used to display a map that has been rendered somewhere else.)
-world: "world"
+world: "world/DIM-1"
 
 # A lower value makes the map sorted first (in lists and menus), a higher value makes it sorted later.
 # The value needs to be an integer but it can be negative.
 # You can change this at any time.
 # Default is 0
-sorting: 0
+sorting: 100
 
 # The position on the world where the map will be centered if you open it.
 # You can change this at any time.
@@ -27,18 +27,18 @@ sorting: 0
 # The color of the sky as a hex-color
 # You can change this at any time.
 # Default is "#7dabff"
-sky-color: "#7dabff"
+sky-color: "#290000"
 
 # The color of the void as a hex-color
 # You can change this at any time.
 # Default is "#000000"
-void-color: "#000000"
+void-color: "#150000"
 
 # Defines the ambient light-strength that every block is receiving, regardless of the sunlight/blocklight.
 # 0 is no ambient light, 1 is fully lighted.
 # You can change this at any time.
 # Default is 0
-ambient-light: 0.1
+ambient-light: 0.6
 
 # Defines the skylight level that the sky of the world is emitting.
 # This should always be equivalent to the maximum in-game sky-light for that world!
@@ -46,7 +46,7 @@ ambient-light: 0.1
 # If this is a normal nether or end dimension, set this to 0 (min).
 # Changing this value requires a re-render of the map.
 # Default is 15
-world-sky-light: 15
+world-sky-light: 0
 
 # BlueMap tries to omit all blocks that are below this Y-level and are not visible from above-ground.
 # More specific: Block-Faces that have a sunlight/skylight value of 0 are removed.
@@ -55,7 +55,7 @@ world-sky-light: 15
 # Set to a very high value to remove caves everywhere (e.g. 10000)
 # Set to a very low value to remove nothing and render all caves (e.g. -10000)
 # Default is 55 (slightly below water-level)
-remove-caves-below-y: 55
+remove-caves-below-y: -10000
 
 # This is the amount of blocks relative to the "ocean-floor" heightmap that the cave-detection will start at.
 # Everything above that (heightmap-relative) y-level will not be removed.
@@ -79,7 +79,7 @@ cave-detection-uses-block-light: false
 #min-z: -4000
 #max-z: 4000
 #min-y: 50
-#max-y: 100
+max-y: 90
 
 # The minimum "inhabitedTime" value that a chunk must have to be rendered.
 # If you set this to a value greater than 0, bluemap will only render chunks that players have visited already.
