feat: edited config

--- a/blue-map/config/core.conf
+++ b/blue-map/config/core.conf
@@ -9,7 +9,7 @@
 # This file contains resources that belong to mojang and you must not redistribute it or do anything else that is not compliant with mojang's EULA.
 # BlueMap uses resources in this file to generate the 3D-Models used for the map and texture them. (BlueMap will not work without those resources.)
 # 2024-01-21T18:00:03
-accept-download: false
+accept-download: true
 
 # The folder where bluemap saves data-files it needs during runtime or to save e.g. the render-progress to resume it later.
 # Default is "bluemap"
@@ -21,7 +21,7 @@ data: "data"
 # Zero or a negative value means the amount of of available processor-cores subtracted by the value.
 # (So a value of -2 with 6 cores results in 4 render-processes)
 # Default is 1
-render-thread-count: 2
+render-thread-count: 0
 
 # Controls whether BlueMap should try to find and load mod-resources and datapacks from the server/world-directories.
 # Default is true
