--- a/blue-map/config/maps/overworld.conf.example
+++ b/blue-map/config/maps/overworld.conf.example
@@ -6,12 +6,12 @@
 # The name of this map
 # This defines the display name of this map, you can change this at any time.
 # Default is the id of this map
-name: "Overworld"
+# name: "Overworld"
 
 # The path to the save-folder of the world to render.
 #  (If this is not defined (commented out or removed), the map will be only registered to the web-server and the web-app
 #   but not rendered or loaded by BlueMap. This can be used to display a map that has been rendered somewhere else.)
-world: "world"
+# world: "world"
 
 # A lower value makes the map sorted first (in lists and menus), a higher value makes it sorted later.
 # The value needs to be an integer but it can be negative.
