--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     env_file:
       - .env.docker.nginx.development
     volumes:
-    - ./output:/usr/share/nginx/html
+    - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    - ./blue-map/web:/usr/share/nginx/html/
     ports:
-      - ${NGINX_PORT}:${NGINX_PORT}
+      - ${NGINX_PORT}:3000
