--- a/blue-map/config/maps/season-3-overworld.conf
+++ b/blue-map/config/maps/season-3-overworld.conf
@@ -1,17 +1,17 @@
 # Season 3 - Overworld
 
 name: "Season 3 - Overworld"
-# world: "/media/jotalanusse/Windows Secondary/Minecraft Backup/seasons/organized/season-3/overworld"
-# sorting: 3
-# sky-color: "#7dabff"
-# voidColor: "#000000"
-# ambient-light: 0.1
-# world-sky-light: 15
-# remove-caves-below-y: -10000
-# cave-detection-ocean-floor: -5
-# cave-detection-uses-block-light: false
-# min-inhabited-time: 0
-# render-edges: true
-# save-hires-layer: true
-# storage: "file"
-# ignore-missing-light-data: false
+world: "/media/jotalanusse/Windows Secondary/Minecraft Backup/seasons/organized/season-3-upgraded/overworld"
+sorting: 3
+sky-color: "#7dabff"
+voidColor: "#000000"
+ambient-light: 0.1
+world-sky-light: 15
+remove-caves-below-y: -10000
+cave-detection-ocean-floor: -5
+cave-detection-uses-block-light: false
+min-inhabited-time: 0
+render-edges: true
+save-hires-layer: true
+storage: "file"
+ignore-missing-light-data: false
