feat: updated everything

--- a/blue-map/config/maps/mod-season-1-overworld.conf
+++ b/blue-map/config/maps/mod-season-1-overworld.conf
@@ -1,17 +1,22 @@
 # Mod Season 1 - Overworld
 
+world: "/media/jotalanusse/Hard Drive/Minecraft Backup/seasons/organized/mod-season-1/overworld"
+dimension: "minecraft:overworld"
 name: "Mod Season 1 - Overworld"
-world: "/media/jotalanusse/Windows Secondary/Minecraft Backup/seasons/organized/mod-season-1/overworld"
-sorting: 27
+sorting: 19
 sky-color: "#7dabff"
-voidColor: "#000000"
+void-color: "#000000"
+sky-light: 1
 ambient-light: 0.1
-world-sky-light: 15
-remove-caves-below-y: -10000
+remove-caves-below-y: 55
 cave-detection-ocean-floor: -5
 cave-detection-uses-block-light: false
 min-inhabited-time: 0
 render-edges: true
-save-hires-layer: true
+enable-perspective-view: true
+enable-flat-view: true
+enable-free-flight-view: true
+enable-hires: true
 storage: "file"
 ignore-missing-light-data: false
+marker-sets: {}
