--- a/blue-map/config/maps/season-6-nether.conf
+++ b/blue-map/config/maps/season-6-nether.conf
@@ -1,18 +1,23 @@
 # Season 6 - Nether
 
+world: "/media/jotalanusse/Hard Drive/Minecraft Backup/seasons/organized/season-6/nether"
+dimension: "minecraft:the_nether"
 name: "Season 6 - Nether"
-world: "/media/jotalanusse/Windows Secondary/Minecraft Backup/seasons/organized/season-6/nether"
-sorting: 13
+sorting: 11
 sky-color: "#290000"
-voidColor: "#150000"
+void-color: "#150000"
+sky-light: 1
 ambient-light: 0.6
-world-sky-light: 0
 remove-caves-below-y: -10000
 cave-detection-ocean-floor: -5
 cave-detection-uses-block-light: false
 max-y: 90
 min-inhabited-time: 1
 render-edges: true
-save-hires-layer: true
+enable-perspective-view: true
+enable-flat-view: true
+enable-free-flight-view: true
+enable-hires: true
 storage: "file"
 ignore-missing-light-data: false
+marker-sets: {}
