--- a/blue-map/config/webapp.conf
+++ b/blue-map/config/webapp.conf
@@ -22,10 +22,6 @@ update-settings-file: true
 # Default is true
 use-cookies: true
 
-# If the free-flight-mode in the web-application is enabled or not.
-# Default is true
-enable-free-flight: false # Enable when season 8 is over
-
 # If the webapp will default to flat-view instead of perspective-view.
 # Default is false
 default-to-flat-view: false
@@ -57,6 +53,14 @@ hires-slider-min: 0
 lowres-slider-max: 7000
 lowres-slider-default: 2000
 lowres-slider-min: 500
+
+# Here you can specify an alternative base url from where all map data is loaded.
+# Default is "maps"
+#map-data-root: "https://cdn.my-domain.com/mapdata"
+
+# Here you can specify an alternative base url from where all live data is loaded.
+# Default is "maps"
+#live-data-root: "https://cdn.my-domain.com/livedata"
 
 # Here you can add URLs to custom scripts (js) so they will be loaded by the webapp
 # You can place them somewhere in bluemap's webroot and add the (relative) link here
