--- a/blue-map/config/maps/season-8-the-end.conf
+++ b/blue-map/config/maps/season-8-the-end.conf
@@ -1,17 +1,22 @@
 # Season 8 - The End
 
+world: "/media/jotalanusse/Hard Drive/Minecraft Backup/seasons/organized/season-8-updated/the-end"
+dimension: "minecraft:the_end"
 name: "Season 8 - The End"
-world: "/media/jotalanusse/Windows Secondary/Minecraft Backup/seasons/organized/season-8/the-end"
-sorting: 20
+sorting: 18
 sky-color: "#080010"
-voidColor: "#080010"
+void-color: "#080010"
+sky-light: 1
 ambient-light: 0.6
-world-sky-light: 0
 remove-caves-below-y: -10000
 cave-detection-ocean-floor: -5
 cave-detection-uses-block-light: false
 min-inhabited-time: 1
 render-edges: true
-save-hires-layer: true
+enable-perspective-view: true
+enable-flat-view: true
+enable-free-flight-view: true
+enable-hires: true
 storage: "file"
 ignore-missing-light-data: false
+marker-sets: {}
