Updated config files

--- a/blue-map/config/maps/mod-season-1-nether.conf
+++ b/blue-map/config/maps/mod-season-1-nether.conf
@@ -3,7 +3,7 @@
 world: "/media/jotalanusse/Hard Drive/Minecraft Backup/seasons/organized/mod-season-1/nether"
 dimension: "minecraft:the_nether"
 name: "Mod Season 1 - Nether"
-sorting: 20
+sorting: 23
 sky-color: "#290000"
 void-color: "#150000"
 sky-light: 1
@@ -11,7 +11,11 @@ ambient-light: 0.6
 remove-caves-below-y: -10000
 cave-detection-ocean-floor: -5
 cave-detection-uses-block-light: false
-max-y: 90
+render-mask: [
+  {
+    max-y: 90
+  }
+]
 min-inhabited-time: 0
 render-edges: true
 enable-perspective-view: true
