--- a/blue-map/config/maps/season-6-nether.conf
+++ b/blue-map/config/maps/season-6-nether.conf
@@ -11,7 +11,11 @@ ambient-light: 0.6
 remove-caves-below-y: -10000
 cave-detection-ocean-floor: -5
 cave-detection-uses-block-light: false
-max-y: 90
+render-mask: [
+  {
+    max-y: 90
+  }
+]
 min-inhabited-time: 1
 render-edges: true
 enable-perspective-view: true
