--- a/blue-map/config/maps/season-9-nether.conf
+++ b/blue-map/config/maps/season-9-nether.conf
@@ -1,16 +1,21 @@
-# Mod Season 1 - Overworld
+# Season 9 - Nether
 
-world: "/media/jotalanusse/Hard Drive/Minecraft Backup/seasons/organized/mod-season-1/overworld"
-dimension: "minecraft:overworld"
-name: "Mod Season 1 - Overworld"
-sorting: 22
-sky-color: "#7dabff"
-void-color: "#000000"
+world: "/media/jotalanusse/Hard Drive/Minecraft Backup/seasons/organized/season-9/nether"
+dimension: "minecraft:the_nether"
+name: "Season 9 - Nether"
+sorting: 20
+sky-color: "#290000"
+void-color: "#150000"
 sky-light: 1
-ambient-light: 0.1
+ambient-light: 0.6
 remove-caves-below-y: -10000
 cave-detection-ocean-floor: -5
 cave-detection-uses-block-light: false
+render-mask: [
+  {
+    max-y: 90
+  }
+]
 min-inhabited-time: 0
 render-edges: true
 enable-perspective-view: true
