--- a/blue-map/config/maps/season-9-overworld.conf
+++ b/blue-map/config/maps/season-9-overworld.conf
@@ -1,9 +1,9 @@
-# Mod Season 1 - Overworld
+# Season 9 - Overworld
 
-world: "/media/jotalanusse/Hard Drive/Minecraft Backup/seasons/organized/mod-season-1/overworld"
+world: "/media/jotalanusse/Hard Drive/Minecraft Backup/seasons/organized/season-9/overworld"
 dimension: "minecraft:overworld"
-name: "Mod Season 1 - Overworld"
-sorting: 22
+name: "Season 9 - Overworld"
+sorting: 19
 sky-color: "#7dabff"
 void-color: "#000000"
 sky-light: 1
