--- a/blue-map/config/maps/season-9-the-end.conf
+++ b/blue-map/config/maps/season-9-the-end.conf
@@ -1,13 +1,13 @@
-# Mod Season 1 - Overworld
+# Season 9 - The End
 
-world: "/media/jotalanusse/Hard Drive/Minecraft Backup/seasons/organized/mod-season-1/overworld"
-dimension: "minecraft:overworld"
-name: "Mod Season 1 - Overworld"
-sorting: 22
-sky-color: "#7dabff"
-void-color: "#000000"
+world: "/media/jotalanusse/Hard Drive/Minecraft Backup/seasons/organized/season-9/the-end"
+dimension: "minecraft:the_end"
+name: "Season 9 - The End"
+sorting: 21
+sky-color: "#080010"
+void-color: "#080010"
 sky-light: 1
-ambient-light: 0.1
+ambient-light: 0.6
 remove-caves-below-y: -10000
 cave-detection-ocean-floor: -5
 cave-detection-uses-block-light: false
